<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleLoginSignupApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txtTitle">Athvillar</string>
    <string name="hintUsername">Enter Username..</string>
    <string name="hintPassword">Enter Password..</string>
    <string name="btnLogin">Log In</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="txtDesc">
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar Athvillar
    </string>
    <string name="btnSignup">Signup</string>


</resources>
