<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.athvillar.tausy.simpleloginsignupapp.LoginActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtDesc"
        android:layout_alignEnd="@+id/txtDesc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignup"
        android:id="@+id/btnSignup"
        android:textSize="20sp"
        android:layout_above="@+id/txtTitle"
        android:layout_toLeftOf="@+id/btnLogin"
        android:layout_toStartOf="@+id/btnLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="#ff838200"
        android:textSize="40sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDesc"
        android:id="@+id/txtDesc"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="15dp"
        android:textSize="15sp" />


</RelativeLayout>
